This this the changelog file for the Pothos GUI toolkit.

Release 0.1.1 (pending)
==========================

- Fixed block ID update while editing

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos GUI toolkit.